--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,5 +32,6 @@
   },
   "options_page": "options.html",
   "web_accessible_resources" : ["/js/my_file.js"],
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='"
 }
