--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-json-tree": "^0.11.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "stacktrace-js": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && webpack --config webpack-injection.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
+  }
 }
